--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@types/pg": "^8.6.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "pg": "^8.8.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
